more stuff for alt verify page

--- a/alt.fedoraproject.org/data/content/verify.html
+++ b/alt.fedoraproject.org/data/content/verify.html
@@ -34,9 +34,9 @@
     <div class="row bottom-space">
         <div class="col-sm-4 col-xs-12 highlight productitem">
             <div class="productitem-logo">
-                <img src="${path}/static/images/logo-color-workstation.png" />
+                <img src="${path}/static/images/logo-color-server.png" />
             </div>
-            <h4 class="uppercase">${_('Workstation')}</h4>
+            <h4 class="uppercase">${_('Server')}</h4>
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For aarch64')}</a>
             </div>
@@ -46,23 +46,32 @@
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-i386-CHECKSUM">${_('For ppc64le')}</a>
             </div>
+            <div class="h-body text-center">
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For s390x')}</a>
+            </div>
         </div>
         <div class="col-sm-4 col-xs-12 highlight productitem">
             <div class="productitem-logo">
-                <img src="${path}/static/images/logo-color-server.png" />
+                <img src="${path}/static/images/logo-color-cloud.png" />
             </div>
-            <h4 class="uppercase">${_('Server')}</h4>
+            <h4 class="uppercase">${_('Cloud')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For aarch64')}</a>
-            </div>
-            <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For ppc64')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For aarch64 iso')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For ppc64le')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For aarch64 images')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For s390x')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For ppc64 iso')}</a>
+            </div>
+            <div class="h-body text-center">
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For ppc64 images')}</a>
+            </div>
+            <div class="h-body text-center">
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For ppc64le iso')}</a>
+            </div>
+            <div class="h-body text-center">
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For ppc64le images')}</a>
             </div>
         </div>
         <div class="col-sm-4 col-xs-12 highlight productitem cloud">
