replace cloud references with atomic

--- a/getfedora.org/data/content/atomic/download/index.html
+++ b/getfedora.org/data/content/atomic/download/index.html
@@ -7,7 +7,7 @@
   <head>
     <script type="text/javascript" src="${path}/static/js/cloud_ec2.js"></script>
 
-    <title>${_('Download Fedora Cloud')}</title>
+    <title>${_('Download Fedora Atomic')}</title>
   </head>
   <body id="cloud">
 
