--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -56,17 +56,17 @@
         </div>
         <div class="col-sm-4 col-xs-12 productitem atomic">
           <div class="edition-logo">
-          <a href="../${lang}/cloud">
+          <a href="../${lang}/atomic">
             <img src="${path}/static/images/atomic-logo.png" />
             <h3>Atomic</h3>
           </a>
-          <a href="../${lang}/cloud/download">Download Now</a>
+          <a href="../${lang}/atomic/download">Download Now</a>
           </div>
         </div>
         <div class="col-xs-12 h-caption top-margin productdesc cloud visible-xs">
             <h4>Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.</h4>
             <p class="text-center uppercase bottom-space">
-              <a role="button" href="../${lang}/cloud/download" class="btn btn-edition">Download now</a>
+              <a role="button" href="../${lang}/atomic/download" class="btn btn-edition">Download now</a>
             </p>
         </div>
       </div>
