add missing genshi markups

--- a/getfedora.org/data/content/atomic/download/index.html
+++ b/getfedora.org/data/content/atomic/download/index.html
@@ -342,7 +342,7 @@
           <p><i class="fa fa-fw fa-sm header-icon fa-envelope-o"></i>${Markup(_('&lt;a href="https://lists.projectatomic.io/mailman/listinfo/atomic"&gt;&lt;strong&gt;Project Atomic: Mailing List&lt;/strong&gt;&lt;/a&gt;'))}</p>
           <div class="pull-right bottom-step"><p>${Markup(_('Join the upstream mailing list at &lt;a href="%s"&gt;atomic@projectatomic.io&lt;/a&gt;.') % ('mailto:atomic@projectatomic.io'))}</p></div>
           <p><i class="fa fa-fw fa-sm header-icon fa-comments-o"></i>${Markup(_('&lt;a href="%s"&gt;&lt;strong&gt;Project Atomic: IRC Chat&lt;/strong&gt;&lt;/a&gt;') % ('https://kiwiirc.com/client/irc.freenode.net'))}</p>
-          <div class="pull-right bottom-margin"><p>${Markup(_('Join the Project Atomic chat on &lt;strong&gt;#atomic&lt;/strong&gt;&lt;/a&gt; on &lt;strong&gt;irc.freenode.org&lt;/strong&gt;&lt;/a&gt;.'))}</p></div>
+          <div class="pull-right bottom-margin"><p>${Markup(_('Join the Project Atomic channel &lt;strong&gt;#atomic&lt;/strong&gt;&lt;/a&gt; on &lt;strong&gt;irc.freenode.org&lt;/strong&gt;&lt;/a&gt;.'))}</p></div>
           <div class="top-space bottom-margin">
             <py:choose>
             <py:when test="global_variables.release['curr_atomic_state'] == 'Alpha'">
