--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -27,46 +27,46 @@
           <div class="edition-logo">
           <a href="../${lang}/workstation">
             <img src="${path}/static/images/ws-logo.png" />
-            <h3>Workstation</h3>
+            <h3>${_('Workstation')}</h3>
           </a>
-          <a href="../${lang}/workstation/download">Download Now</a>
+          <a href="../${lang}/workstation/download">${_('Download Now')}</a>
 
           </div>
         </div>
         <div class="col-xs-12 h-caption top-margin liveusb productdesc workstation visible-xs">
-            <h4>Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.</h4>
+            <h4>${_('Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.')}</h4>
             <p class="text-center uppercase">
-              <a role="button" href="../${lang}/workstation/download" class="btn btn-edition">Download now</a>
+              <a role="button" href="../${lang}/workstation/download" class="btn btn-edition">${_('Download now')}</a>
             </p>
         </div>
         <div class="col-sm-4 col-xs-12 productitem server">
           <div class="edition-logo">
           <a href="../${lang}/server">
             <img src="${path}/static/images/server-logo-next.png" />
-            <h3>Server</h3>
+            <h3>${_('Server')}</h3>
           </a>
-          <a href="../${lang}/server/download">Download Now</a>
+          <a href="../${lang}/server/download">${_('Download Now')}</a>
           </div>
         </div>
         <div class="col-xs-12 h-caption top-margin liveusb productdesc server visible-xs">
-            <h4>Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.</h4>
+            <h4>${_('Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.')}</h4>
             <p class="text-center uppercase">
-              <a role="button" href="../${lang}/server/download" class="btn btn-edition">Download now</a>
+              <a role="button" href="../${lang}/server/download" class="btn btn-edition">${_('Download now')}</a>
             </p>
         </div>
         <div class="col-sm-4 col-xs-12 productitem atomic">
           <div class="edition-logo">
           <a href="../${lang}/atomic">
             <img src="${path}/static/images/atomic-logo.png" />
-            <h3>Atomic</h3>
+            <h3>${_('Atomic')}</h3>
           </a>
-          <a href="../${lang}/atomic/download">Download Now</a>
+          <a href="../${lang}/atomic/download">${_('Download Now')}</a>
           </div>
         </div>
         <div class="col-xs-12 h-caption top-margin productdesc cloud visible-xs">
-            <h4>Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.</h4>
+            <h4>${_('Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.')}</h4>
             <p class="text-center uppercase bottom-space">
-              <a role="button" href="../${lang}/atomic/download" class="btn btn-edition">Download now</a>
+              <a role="button" href="../${lang}/atomic/download" class="btn btn-edition">${_('Download now')}</a>
             </p>
         </div>
       </div>
@@ -87,17 +87,17 @@
       <div class="row hidden-xs">
         <div class="col-sm-4 col-xs-12 productdesc workstation">
           <div class="h-body liveusb">
-            <h4>Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.</h4>
+            <h4>${_('Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.')}</h4>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 productdesc server">
           <div class="h-body liveusb">
-            <h4>Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.</h4>
+            <h4>${_('Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.')}</h4>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 productdesc cloud">
           <div class="h-body">
-            <h4>Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.</h4>
+            <h4>${_('Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.')}</h4>
           </div>
         </div>
       </div>
