--- a/alt.fedoraproject.org/data/content/verify.html
+++ b/alt.fedoraproject.org/data/content/verify.html
@@ -38,16 +38,16 @@
             </div>
             <h4 class="uppercase">${_('Server')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-aarch64-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For aarch64')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-ppc64-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For ppc64')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64-CHECKSUM">${_('For ppc64')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-ppc64le-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For ppc64le')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-s390x-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For s390x')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_s390x']}-s390x-CHECKSUM">${_('For s390x')}</a>
             </div>
         </div>
         <div class="col-sm-4 col-xs-12 highlight productitem">
@@ -56,22 +56,22 @@
             </div>
             <h4 class="uppercase">${_('Cloud')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-aarch64-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For aarch64 iso')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64 iso')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-CloudImages-${global_variables.release['curr_alt_id']}-aarch64-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For aarch64 images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-CloudImages-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64 images')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-ppc64-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For ppc64 iso')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64-CHECKSUM">${_('For ppc64 iso')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-CloudImages-${global_variables.release['curr_alt_id']}-ppc64-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For ppc64 images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-CloudImages-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64-CHECKSUM">${_('For ppc64 images')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-ppc64le-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For ppc64le iso')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le iso')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-CloudImages-${global_variables.release['curr_alt_id']}-ppc64le-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For ppc64le images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-CloudImages-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le images')}</a>
             </div>
         </div>
         <div class="col-sm-4 col-xs-12 highlight productitem cloud">
@@ -80,13 +80,13 @@
             </div>
             <h4 class="uppercase">${_('Docker')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Docker-${global_variables.release['curr_alt_id']}-aarch64-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For aarch64')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Docker-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Docker-${global_variables.release['curr_alt_id']}-ppc64-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For ppc64')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Docker-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64-CHECKSUM">${_('For ppc64')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Docker-${global_variables.release['curr_alt_id']}-ppc64le-${global_variables.release['alt_composedate']}.n.0-CHECKSUM">${_('For ppc64le')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Docker-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
             </div>
         </div>
     </div>
