no Multiboot ISO for F25 - drop it

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -335,7 +335,7 @@
     </div>
   </div>
 
-  <!-- Multi Boot -->
+  <!-- Multi Boot
   <div class="jumbotron main-head top-space visible-lg hidden-xs hidden-sm hidden-md">
     <div class="container using">
       <div class="row">
@@ -366,8 +366,8 @@
       </div>
     </div>
   </div>
-
-  <!-- Multi Boot mobile phones-->
+-->
+  <!-- Multi Boot mobile phones
   <div class="jumbotron main-head top-space visible-xs">
     <div class="container using">
       <div class="row">
@@ -393,8 +393,8 @@
       </div>
     </div>
   </div>
-
-  <!-- Multi Boot mobile tablets-->
+-->
+  <!-- Multi Boot mobile tablets
   <div class="jumbotron main-head top-space visible-sm-md hidden-xs hidden-lg">
     <div class="container using">
       <div class="row">
@@ -422,7 +422,7 @@
       </div>
     </div>
   </div>
-
+-->
   <!-- Resources -->
   <div class="jumbotron whitesupport">
     <div class="container">
