--- a/spins.fedoraproject.org/data/content/xfce/download/index.html
+++ b/spins.fedoraproject.org/data/content/xfce/download/index.html
@@ -18,7 +18,7 @@
         <div class="col-md-7 col-md-offset-5 text-left">
           <h2>${Markup(_('Download Fedora %(rel)s Xfce Desktop')) % {'rel':global_variables.release['curr_id']}}</h2>
             <p class="gr"><a class="btn btn-success xfce-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/x86_64/iso/Fedora-Xfce-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p>
-            <h5>${Markup(_('%s MB ISO Image for 64-bit PC')) % global_variables.iso_size['x86_64_Live_Xfce']}</h5>
+            <h5>${Markup(_('%s GB ISO Image for 64-bit PC')) % global_variables.iso_size['x86_64_Live_Xfce']}</h5>
         </div>
       </div>
     </div>
@@ -35,7 +35,7 @@
           <h4>${_('Direct Downloads')}</h4>
           <ul>
               <li>
-                  <p><a class="xfce-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/i386/iso/Fedora-Xfce-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sMB Live image')) % global_variables.iso_size['i686_Live_Xfce']}</a></p>
+                  <p><a class="xfce-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/i386/iso/Fedora-Xfce-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Xfce']}</a></p>
               </li>
           </ul>
           <h4>${Markup(_('ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt; Technology'))}</h4>
