--- a/getfedora.org/data/content/atomic/download/index.html
+++ b/getfedora.org/data/content/atomic/download/index.html
@@ -50,7 +50,7 @@
               <ul>
               <li>${Markup(_('&lt;strong&gt;Please test before using new versions in production.&lt;/strong&gt; If you do discover a problem, the Atomic Host tools make it easy to flip back to an earlier release — and if that happens, please also help us by filing bugs or submitting fixes.'))}</li>
               <li>${Markup(_('&lt;strong&gt;Fedora Atomic Host images are updated roughly every two weeks,&lt;/strong&gt; rather than on the main six-month Fedora cadence. Because development is moving quickly, only the latest major Fedora release is supported.'))}</li>
-              <li>${Markup(_('&lt;strong&gt;Note that different Fedora Atomic Host media are subject to different levels of automatic testing.&lt;/strong&gt; You can learn more about the Atomic project at &lt;a href="%s"&gt;projectatomic.io&lt;/a&gt;, &lt;a href="%s"&gt;click here&lt;/a&gt; to see the current test status.') % ('//projectatomic.io/', '//status/'))}</li>
+              <li>${Markup(_('&lt;strong&gt;Note that different Fedora Atomic Host media are subject to different levels of automatic testing.&lt;/strong&gt; You can learn more about the Atomic project at &lt;a href="%s"&gt;projectatomic.io&lt;/a&gt;, &lt;a href="%s"&gt;click here&lt;/a&gt; to see the current test status.') % ('//projectatomic.io/', '//apps.fedoraproject.org/autocloud/compose?limit=10'))}</li>
             </ul>
           </div>
       </div>
