Fix common bugs bookmark

--- a/getfedora.org/data/content/workstation/download/index.html
+++ b/getfedora.org/data/content/workstation/download/index.html
@@ -175,7 +175,7 @@
           <div class="pull-right bottom-step"><p>${_('Learn about changes since the last version of Fedora as well as minimum requirements and recommendations for running Fedora.')}</p></div>
           <p><i class="fa fa-fw fa-sm header-icon fa-book"></i>${Markup(_('&lt;a href="//docs.fedoraproject.org/install-guide"&gt;&lt;strong&gt;Installation Guide&lt;/strong&gt;&lt;/a&gt;'))}</p>
           <div class="pull-right bottom-step"><p>${_('We recommend you look through this before installing to your system, since it answers many common questions.')}</p></div>
-          <p><i class="fa fa-fw fa-sm header-icon fa-globe"></i>${Markup(_('&lt;a href="%(commonbugs_url)s"&gt;&lt;strong&gt;Common Bugs&lt;/strong&gt;&lt;/a&gt;') % {'commonbugs_url': 'https://fedoraproject.org/wiki/Common_F%s_bugs' % (global_variables.release['next_id'])})}</p>
+          <p><i class="fa fa-fw fa-sm header-icon fa-globe"></i>${Markup(_('&lt;a href="%(commonbugs_url)s"&gt;&lt;strong&gt;Common Bugs&lt;/strong&gt;&lt;/a&gt;') % {'commonbugs_url': 'https://fedoraproject.org/wiki/Common_F%s_bugs' % (global_variables.release['curr_id'])})}</p>
           <div class="pull-right bottom-margin"><p>${_('An excellent resource to consult in case you run into any issues installing or running Fedora.')}</p></div>
 
           <div class="bottom-margin"><h4>${_('What does "Live" mean?')}</h4></div>
