uppercase for z Systems

--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -838,7 +838,7 @@
       </div>
       <div class="row">
         <div class="col-md-3 product-feature">
-        <p>${_('If you want to install Fedora on IBM z systems, then you are looking for this architecture.')}</p>
+        <p>${_('If you want to install Fedora on IBM z Systems, then you are looking for this architecture.')}</p>
         </div>
         <div class="col-md-9">
           <div class="white">
@@ -870,7 +870,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('If you want to install Fedora on IBM z systems, then you are looking for this architecture.')}</p>
+        <p>${_('If you want to install Fedora on IBM z Systems, then you are looking for this architecture.')}</p>
         </div>
       </div>
       <div class="row">
@@ -897,7 +897,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('If you want to install Fedora on IBM z systems, then you are looking for this architecture.')}</p>
+        <p>${_('If you want to install Fedora on IBM z Systems, then you are looking for this architecture.')}</p>
         </div>
       </div>
       <div class="row">
