use https for the links to www.projectatomic.io - #71

--- a/getfedora.org/data/content/atomic/download/index.html
+++ b/getfedora.org/data/content/atomic/download/index.html
@@ -50,7 +50,7 @@
               <ul>
               <li>${Markup(_('&lt;strong&gt;Please test before using new versions in production.&lt;/strong&gt; If you do discover a problem, the Atomic Host tools make it easy to flip back to an earlier release — and if that happens, please also help us by filing bugs or submitting fixes.'))}</li>
               <li>${Markup(_('&lt;strong&gt;Fedora Atomic Host images are updated roughly every two weeks,&lt;/strong&gt; rather than on the main six-month Fedora cadence. Because development is moving quickly, only the latest major Fedora release is supported.'))}</li>
-              <li>${Markup(_('&lt;strong&gt;Note that different Fedora Atomic Host media are subject to different levels of automatic testing.&lt;/strong&gt; You can learn more about the Atomic project at &lt;a href="%s"&gt;projectatomic.io&lt;/a&gt;. &lt;a href="%s"&gt;Click here&lt;/a&gt; to see the current test status.') % ('//projectatomic.io/', '//apps.fedoraproject.org/autocloud/compose?limit=10'))}</li>
+              <li>${Markup(_('&lt;strong&gt;Note that different Fedora Atomic Host media are subject to different levels of automatic testing.&lt;/strong&gt; You can learn more about the Atomic project at &lt;a href="%s"&gt;projectatomic.io&lt;/a&gt;. &lt;a href="%s"&gt;Click here&lt;/a&gt; to see the current test status.') % ('https://www.projectatomic.io/', '//apps.fedoraproject.org/autocloud/compose?limit=10'))}</li>
             </ul>
           </div>
       </div>
@@ -337,7 +337,7 @@
             </ul>
           </p>
         <div class="top-space bottom-margin"><h4>${_('Resources')}</h4></div>
-          <p><i class="fa fa-fw fa-sm header-icon fa-globe"></i>${Markup(_('&lt;a href="http://www.projectatomic.io/docs/quickstart/"&gt;&lt;strong&gt;Project Atomic: Getting Started&lt;/strong&gt;&lt;/a&gt;'))}</p>
+          <p><i class="fa fa-fw fa-sm header-icon fa-globe"></i>${Markup(_('&lt;a href="https://www.projectatomic.io/docs/quickstart/"&gt;&lt;strong&gt;Project Atomic: Getting Started&lt;/strong&gt;&lt;/a&gt;'))}</p>
           <div class="pull-right bottom-step"><p>${_('Documentation on getting started using Project Atomic / Atomic Host.')}</p></div>
           <p><i class="fa fa-fw fa-sm header-icon fa-envelope-o"></i>${Markup(_('&lt;a href="https://lists.projectatomic.io/mailman/listinfo/atomic"&gt;&lt;strong&gt;Project Atomic: Mailing List&lt;/strong&gt;&lt;/a&gt;'))}</p>
           <div class="pull-right bottom-step"><p>${Markup(_('Join the upstream mailing list at &lt;a href="%s"&gt;atomic@projectatomic.io&lt;/a&gt;.') % ('mailto:atomic@projectatomic.io'))}</p></div>
