change the bfo source code URL to pagure

--- a/boot.fedoraproject.org/data/content/faq.html
+++ b/boot.fedoraproject.org/data/content/faq.html
@@ -46,7 +46,7 @@
     <h3 class="question">${_("Why won't BFO boot?")}</h3>
     <p class="answer">${_("BFO uses ipxe so it's not actually booting a Linux kernel at first.  As such, some drivers and devices may not be supported.  If this is the case for you please check upstream at http://etherboot.org/ for bug updates, etc.  If you feel a bug or device is supported but not working in BFO, contact: ")}<a href="mailto:admin@fedoraproject.org">admin@fedoraproject.org</a></p>
     <h3 class="question">${_("Where can I find the BFO sources and configuration?")}</h3>
-    <p class="answer">${Markup(_('BFO source code is available on the &lt;a href="%s"&gt;fedora-infrastructure.git&lt;/a&gt; repository.' % 'http://git.fedorahosted.org/git/?p=fedora-infrastructure.git;a=tree;f=bfo;hb=HEAD'))}</p>
+    <p class="answer">${Markup(_('BFO source code is available on the &lt;a href="%s"&gt;fedora-infrastructure.git&lt;/a&gt; repository.' % 'https://pagure.io/fedora-infrastructure/blob/master/f/bfo'))}</p>
     <h3 class="question">${_("Where do I report issues?")}</h3>
     <ul class="answer">
         <li>${Markup(_('Issue with using or implementing BFO? Contact the &lt;a href="%s"&gt;Infrastructure Team&lt;/a&gt;.' % 'http://fedoraproject.org/wiki/Infrastructure#Bugs_and_Requests'))}</li>
