fix Jam slogan and description in labs index

--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -41,8 +41,8 @@
         <div class="col-md-5 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/jam"><img class="screenshot-banner" src="${path}/static/images/jam-banner.png" alt="Jam banner" /></a></div>
           <a href="/${lang}/jam"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-jam.jpg" alt="Jam Screenshot" /></a>
-          <div class="screenshot-text bottom-border"><a href="/${lang}/jam"><h3>${_('Play with Fedora Today!')}</h3></a>
-          <span class="grey">${_('A collection and perfect show-case of the best games available in Fedora.')}</span></div>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/jam"><h3>${_('Unleash your inner musician.')}</h3></a>
+          <span class="grey">${_('For audio enthusiasts and musicians who want to create, edit and produce audio and music on Linux.')}</span></div>
         </div>
        </div>
 
