fix description for Atomic on getfedora.org index

--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="col-xs-12 h-caption top-margin productdesc cloud visible-xs">
-            <h4>${_('Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.')}</h4>
+            <h4>${_('Fedora Atomic provides the best platform for your Linux-Docker-Kubernetes (LDK) application stack.')}</h4>
             <p class="text-center uppercase bottom-space">
               <a role="button" href="../${lang}/atomic/download" class="btn btn-edition">${_('Download now')}</a>
             </p>
@@ -97,7 +97,7 @@
         </div>
         <div class="col-sm-4 col-xs-12 productdesc cloud">
           <div class="h-body">
-            <h4>${_('Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.')}</h4>
+            <h4>${_('Fedora Atomic provides the best platform for your Linux-Docker-Kubernetes (LDK) application stack.')}</h4>
           </div>
         </div>
       </div>
