--- a/alt.fedoraproject.org/data/content/cloud/index.html
+++ b/alt.fedoraproject.org/data/content/cloud/index.html
@@ -455,29 +455,6 @@
   <div class="white-hr"></div>
   <!-- end EC2 AMI IDs -->
 
-
-
-
-
-
-
-
-<!-- Resources -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <!-- Resources -->
   <div class="jumbotron main-head">
     <div class="container">
@@ -490,19 +467,19 @@
         <div class="col-md-4 col-xs-12">
         <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
-          <p>${Markup(_('A wiki page with information about Power Architecture on Fedora is available on the &lt;a href="%s"&gt;Fedora Project Wiki&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Architectures/s390x'))}</p>
+          <p>${Markup(_('A wiki page with information about Fedora Cloud and its images is available &lt;a href="%s"&gt;here&lt;/a&gt;.') % ('https://fedoracloud.readthedocs.io/en/latest/whatis.html'))}</p>
         </div>
         </div>
         <div class="col-md-4 col-xs-12">
         <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
-          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;s390x@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/s390x'))}</p>
+          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;cloud@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/cloud'))}</p>
         </div>
         </div>
         <div class="col-md-4 col-xs-12">
         <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-s390x&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-s390x'))}</p>
+          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-cloud&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-cloud'))}</p>
         </div>
         </div>
       </div>
